HELIO-4580 - make resource thumbnail images in gallery view fluid/responsive to prevent overflow

--- a/app/assets/stylesheets/application/heliotrope.scss
+++ b/app/assets/stylesheets/application/heliotrope.scss
@@ -1302,6 +1302,8 @@ footer.press {
           
           img {
             border: 2px solid #eeeeee;
+            max-width: 100%;
+            height: auto;
           }
 
           img.svgicon {
